--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,10 +1,8 @@
-name: Github Pages
-
+name: ci 
 on:
   push:
     branches:
       - main
-
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -13,9 +11,5 @@ jobs:
       - uses: actions/setup-python@v2
         with:
           python-version: 3.x
-      - run: pip3 install -r requirements.txt
+      - run: pip install mkdocs-material 
       - run: mkdocs gh-deploy --force
-
-env:
-  GH_TOKEN: ${{ secrets.GH_TOKEN }}
-  
