--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,6 +7,7 @@ repo_url: https://github.com/augustoliks/aws-mini-book
 edit_uri: ''
 
 nav:
+  - aws-mini-book: index.md
   - 01. Cloud Concepts: 01-cloud-concepts.md
   - 02. Accounts Organization: 02-accounts-organization.md
   - CLI Tools: cli-tools.md
