starts  well-architected topic

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -10,6 +10,7 @@ nav:
   - aws-mini-book: index.md
   - 01. Cloud Concepts: 01-cloud-concepts.md
   - 02. Accounts Organization: 02-accounts-organization.md
+  - 03. Well Architected Framework: 03-well-architected-framework.md
   - CLI Tools: cli-tools.md
   - Contributors: contributors.md
 
